[MJLINK-41] add support for --add-options argument (JDK14+).